--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1334,7 +1334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I wanted to find out if we can find the pincodes + annotate together so I asked ChatGPT. I think I understand what it did (below) but it would be helpful if you took us through this in class. "
+    "I wanted to find out if we can find the pincodes + annotate together so I asked ChatGPT. Took me quite some time to understand what it did. So useful!!"
    ]
   },
   {
